More work on the demo app home page

--- a/app/styles/ember-fountainhead/fonts/_source-code-pro.scss
+++ b/app/styles/ember-fountainhead/fonts/_source-code-pro.scss
@@ -1,5 +1,5 @@
 // ========================================================
-// Optional Source Code Pro Import
+// Source Code Pro Font
 // ========================================================
 
 /* latin-ext */
