--- a/tests/dummy/app/styles/_landing.scss
+++ b/tests/dummy/app/styles/_landing.scss
@@ -2,6 +2,8 @@
 // Landing Page Styles
 // ========================================================
 
+// Home page hero
+// ---------------------------------------------------------------------------
 .hero {
   background-color: #50676B;
   color: #E6E6E6;
@@ -35,14 +37,16 @@
   }
 }
 
-.home-shortcuts {
+// Links wrapper
+.hero-links {
   margin-top: 35px;
 }
 
+// Individual hero link - looks like a button
 .hero-link {
   color: $white;
   font-size: 18px;
-  padding: 7px 24px;
+  padding: 8px 24px 9px;
   border: 2px solid $white;
   margin: 10px 5px;
   border-radius: 4px;
@@ -70,23 +74,34 @@
   .line-e { fill: #B084EB; }
 }
 
-// Show case divs
+// Feature show case divs
 // ---------------------------------------------------------------------------
-.landing-elements-container {
+
+// Wrapper for showcases
+.landing-features-container {
   max-width: 800px;
   margin: 0 auto;
 }
 
-.fh-element.showcase {
+// Individual showcase box
+.feature {
   display: flex;
   padding-bottom: 40px;
-  border-bottom: 1px solid $border-color;;
+  border-bottom: 1px solid $border-color;
   margin: 40px 0;
-}
 
-.feature-logo {
-  img {
-    width: 75px;
-    height: 75px;
+  &:last-of-type {
+    border-bottom: none;
+  }
+
+  .logo {
+    width: 60px;
+    height: 60px;
+  }
+
+  // When a showcase has no logo, make title 1/3 width and fill the rest w/ description
+  &.no-logo {
+    .title { width: 30%; }
+    .description { flex: 1; }
   }
 }
