--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -13,6 +13,7 @@
 // Demo Site Elements
 // ---------------------------------------------------------------------------
 @import 'landing';
+@import 'guide-page';
 
 // Keep paragraphs at a readable length
 p { max-width: 750px; }
