:sparkles: Add alert for HTMLBars compiler errors when parsing class markdown descriptions.

--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -18,6 +18,7 @@
 @import 'ember-fountainhead/components/tabs';
 @import 'ember-fountainhead/components/svg';
 @import 'ember-fountainhead/components/sidebar';
+@import 'ember-fountainhead/components/alerts';
 
 // Pages
 @import 'ember-fountainhead/components/docs';
