Add classes controller and pass item query param down to items-container component

--- a/addon/templates/docs/classes.hbs
+++ b/addon/templates/docs/classes.hbs
@@ -1,1 +1,7 @@
-{{fountainhead-pages/class class=model}}
+{{! --------------------------------------------------------------------- }}
+{{! Class page accepts query params 'item' from controller
+{{! ('item' is a doc item that should be scrolled to)
+{{! --------------------------------------------------------------------- }}
+{{fountainhead-pages/class
+  class=model
+  item=item}}
