Scope svg classes to fix css clashes :bug:

--- a/app/styles/ember-fountainhead/components/_svg.scss
+++ b/app/styles/ember-fountainhead/components/_svg.scss
@@ -2,7 +2,7 @@
 // SVG Styles
 // ========================================================
 
-.core-svg {
+.fh-svg {
   width: 1em;
   height: 1em;
   display: inline;
