Fountainhead Guides :fireworks: (#28)
* Add decoration for guides setup

* :sparkles: Handle reading, parsing and saving guide markdown files to API json

* Move styles, update demo app

* Add guide page to Fountainhead :fireworks:

* Write test for generate-guide, fix doc tags

* Remove markdown-it-attrs and update guides with front matter

* Adding tests for markdown parsing

* Fixing up guides

--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -21,6 +21,7 @@
 @import 'ember-fountainhead/components/alerts';
 
 // Pages
+@import 'ember-fountainhead/components/guides';
 @import 'ember-fountainhead/components/docs';
 @import 'ember-fountainhead/components/modules';
 
