--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -16,7 +16,7 @@
       <br>
       <span class="italic">Create beautiful, dynamic documentation.</span>
       <div class="hero-links">
-        {{link-to 'Getting Started' 'getting-started' classNames='hero-link'}}
+        {{link-to 'Getting Started' 'guides' 'getting-started' classNames='hero-link'}}
         {{link-to 'Demo' 'docs' classNames='hero-link'}}
       </div>
     </div>
