Docs namespace deprecated and moved to api namespace

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -17,7 +17,7 @@
       <span class="italic">Create beautiful, dynamic documentation.</span>
       <div class="hero-links">
         {{link-to 'Getting Started' 'guides' 'getting-started' classNames='hero-link'}}
-        {{link-to 'Demo' 'docs' classNames='hero-link'}}
+        {{link-to 'Demo' 'api' classNames='hero-link'}}
       </div>
     </div>
   </div>
