--- a/app/styles/ember-fountainhead/base/_typography.scss
+++ b/app/styles/ember-fountainhead/base/_typography.scss
@@ -92,4 +92,6 @@
   .text-right { text-align: right; }
   .text-center { text-align: center; }
   .text-left { text-align: left; }
+
+  .text-muted { color: $rhino; }
 }
