API and Guide Navs :sparkles: (#31)
* Create nav component for guides page :sparkles:

* :white_check_mark: 100 tests strong with real tests for api nav components

* Streamline api nav components, markup and styles :lipstick:

* Swap api nav logo for Ember Fountainhead super pretty logo

--- a/app/styles/ember-fountainhead/base/_application.scss
+++ b/app/styles/ember-fountainhead/base/_application.scss
@@ -35,9 +35,7 @@
   margin: 0;
 }
 
-// fh-container is flex, we want the sidebar to keep width and allow main-content
-// to expand to fill container
-.fh-sidebar-container { flex: 0; }
+// Flex content-container to fill total screen minus navigation
 .fh-content-container { flex: 1; }
 
 // Constrain the content.
