--- a/tests/dummy/app/styles/_landing.scss
+++ b/tests/dummy/app/styles/_landing.scss
@@ -59,19 +59,9 @@
 
 // Logo
 // ---------------------------------------------------------------------------
-.document-logo {
+.fountainhead-logo {
   width: 140px;
   height: 140px;
-
-  .outline {
-    fill: #E6E6E6;
-  }
-
-  .line-a { fill: #ffcc95; }
-  .line-b { fill: #FF9AC1; }
-  .line-c { fill: #7cfce9; }
-  .line-d { fill: #6FC1FF; }
-  .line-e { fill: #B084EB; }
 }
 
 // Feature show case divs
