--- a/app/styles/ember-fountainhead/themes/_simple.scss
+++ b/app/styles/ember-fountainhead/themes/_simple.scss
@@ -42,10 +42,10 @@ $rhino: #7A8288 !default;
 $argent: #c2bfbd !default;
 $ash: rgba(224, 224, 224, 0.65) !default;
 $smoke: #f1f1f1 !default;
+$ghost: rgba(62, 72, 85, 0.025) !default;
 
 // Branding
 $primary: #3E4855 !default; // rgb(62,72,85)
-$primary-bg: rgba(62, 72, 85, 0.3) !default;
 // $primary: #253B52 !default;
 // $primary: #6B8C92 !default;
 // $primary: #50676B !default;
@@ -77,6 +77,7 @@ $deprecated-border: $warning-border !default;
 // Misc
 $fh-body-background: $white !default;
 $border-color: $smoke !default;
+$api-nav-bg: $ghost !default;
 
 // Code Blocks
 // ---------------------------------------------------------------------------
