--- a/app/styles/ember-fountainhead/components/_api-page.scss
+++ b/app/styles/ember-fountainhead/components/_api-page.scss
@@ -2,7 +2,7 @@
 // Docs Page Styles
 // ========================================================
 
-.fh-content {
+.api-documentation {
   // Use for page headers
   .fh-page-header {
     line-height: 1;
@@ -16,24 +16,24 @@
   .fh-docs-category {
     font-weight: 300;
   }
-}
 
-// Description styles are toned down for easier reading
-.fh-description {
-  margin-bottom: 20px;
+  // Description styles are toned down for easier reading
+  .fh-description {
+    margin-bottom: 20px;
 
-  h1 { font-size: 32px; }
-  h2 { font-size: 24px; }
-  h3 { font-size: 18px; }
-  h4 { font-size: 18px; }
+    h1 { font-size: 32px; }
+    h2 { font-size: 24px; }
+    h3 { font-size: 18px; }
+    h4 { font-size: 18px; }
 
-  ul {
-    line-height: 1.3;
+    ul {
+      line-height: 1.3;
 
-    li {
-      margin-bottom: 4px;
+      li {
+        margin-bottom: 4px;
+      }
     }
-  }
 
-  table { margin-bottom: 30px; }
+    table { margin-bottom: 30px; }
+  }
 }
