New logos with text for README and API nav :sparkles:

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <div class="logo">
       <object
         type="image/svg+xml"
-        data="/ember-fountainhead/fountainhead-logo.svg"
+        data="https://cdn.rawgit.com/healthsparq/ember-fountainhead/master/public/fountainhead-logo.svg"
         class='fountainhead-logo'>
       </object>
     </div>
