--- a/app/styles/ember-fountainhead/components/_api-nav.scss
+++ b/app/styles/ember-fountainhead/components/_api-nav.scss
@@ -20,22 +20,9 @@
   .project-logo { max-width: 100%; }
 
   // Special Fountainhead Logo!!!
-  .fountainhead-logo-link {
-    display: flex;
-    padding: 10px 0;
-    &:hover { text-decoration: none; }
-
-    .fountainhead-logo {
-      width: 86px;
-      height: 86px;
-    }
-
-    h3 {
-      color: #E6E6E6;
-      font-size: 34px;
-      line-height: 1.3;
-      margin: 5px 0 0;
-    }
+  .project-logo.fountainhead-logo {
+    width: 300px;
+    margin: 0 10px;
   }
 
   // Made with message at bottom
