--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -18,6 +18,7 @@
 @import 'ember-fountainhead/components/tabs';
 @import 'ember-fountainhead/components/svg';
 @import 'ember-fountainhead/components/alerts';
+@import 'ember-fountainhead/components/fountainhead-header';
 @import 'ember-fountainhead/components/api-nav';
 @import 'ember-fountainhead/components/guide-nav';
 @import 'ember-fountainhead/components/runtime-description';
