--- a/addon/templates/api/files.hbs
+++ b/addon/templates/api/files.hbs
@@ -1,1 +1,6 @@
-{{fountainhead-pages/file file=model}}
+{{! fragmentId used for targeted routing, is conroller query param 'id' when consumer
+    is using Hash Location, is url fragment tracked in Fountainhead service when
+    consumer is using History Location }}
+{{fountainhead-pages/file
+  file=model
+  fragmentId=(if fountainhead.meta.hashRouting id fountainhead.fragmentId)}}
