--- a/app/styles/ember-fountainhead/components/_guide-page.scss
+++ b/app/styles/ember-fountainhead/components/_guide-page.scss
@@ -27,7 +27,10 @@
 
   h2 {
     border-bottom: 1px solid $ash;
-    margin-top: 1.5em;
+    // Mix padding with margin so that when you click on header anchor to copy to
+    // clipboard, there is still some whitespace above header
+    padding-top: 1em;
+    margin-top: 0.5em;
   }
 
   small {
